k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autocare-frontend
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autocare-frontend
  template:
    metadata:
      labels:
        app: autocare-frontend
    spec:
      containers:
        - name: frontend
          image: acrazureproject.azurecr.io/autocare-frontend:v1
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /autocare/
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /autocare/
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
